# RAG_LLMOps_demo

./: .gitignore  questions.md
rag/: README.md  pyproject.toml
rag/src/rag/: docker-compose.yaml
rag/src/rag/backend/: agents.py  api.py  constants.py  data_models.py  middleware.py  pyproject.toml
rag/src/rag/data/: governors_small_business_handbook.txt  jd_1.txt  mi-sbdc-english-fullbook.txt
rag/src/rag/dockerfiles/: backend.dockerfile  frontend.dockerfile
rag/src/rag/frontend/: app.py  pyproject.toml
rag/src/rag/knowledge_base/articles.lance/_transactions/: 0-3a91058f-5ca9-4f45-8c18-9eab1a119c6a.txn  0-5b3ba106-f434-435d-b1fa-7fb135e14025.txn  1-7da28a99-0168-49cc-ba43-ceaa74759ddf.txn  1-86d3ebc6-453d-4a3d-8b05-464332808a58.txn  10-6efdd1b6-4579-45bd-bc1d-269f3ccb2cd5.txn  11-2b1946c3-bffe-4ddc-bc40-d2933be9e068.txn  2-6a9ebb9f-6bf8-4147-933f-6580cb5baac0.txn  2-be46ae42-b971-4ba2-adc8-e13f310d5f8f.txn  3-37ab411d-a414-4dae-a736-f3cb97a0b2f3.txn  3-74d7f8a6-7f40-44b6-968f-4df4ab688899.txn  4-16066c3b-8ff9-4b5b-be19-01893bd00e52.txn  4-ec47a686-160c-485e-ba87-5a3aab090cec.txn  5-3e27b9c8-0949-4259-95c6-949af5fe1cc5.txn  5-94437093-e688-440d-988b-8097b9227cc1.txn  6-03e8e61e-b093-4041-a2ca-1f53c3fbe2e5.txn  6-a33fee1e-2615-40de-ad8a-fbcb2a1c5148.txn  7-c058a28c-f141-417d-a9b2-d5ed066e5da6.txn  8-7ff7143c-8876-4d71-b519-07d3fa2ddfc2.txn  9-c0eb7e10-867c-4556-b6a2-363e8fa7a67d.txn
rag/src/rag/monitoring/: evalution_dataset.json
rag/src/rag/prompt_engineering/: rag_agent_system_prompt.md  register_prompts.py
rag/src/rag/setup/: ingestion.py  pdfs_to_text.py
(+28 files in other folders)
