[project]
name = "rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Vamsi", email = "thevamsithokala@gmail.com" }
]
requires-python = ">=3.13"
dependencies = []

[project.scripts]
rag = "rag:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
